<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mar"
    android:weightSum="1">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/initLogo"
        android:src="@drawable/ic_logo_iniciar"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.20" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/initEmailLoginBtn"
        android:layout_gravity="center_horizontal"
        android:textColor="#3ca4bf"
        android:background="#1cffffff"
        android:drawableLeft="@drawable/ic_ua"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="5dp"
        android:onClick="emailLogin" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/facebook"
        android:id="@+id/initFbLoginBtn"
        android:layout_gravity="center_horizontal"
        android:textColor="#3ca4bf"
        android:background="#1cffffff"
        android:drawableLeft="@drawable/ic_facebook_01"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="5dp"
        android:onClick="facebookLogin" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/initRegisterBtn"
        android:layout_gravity="center_horizontal"
        android:textColor="#3ca4bf"
        android:background="#1cffffff"
        android:drawableLeft="@drawable/ic_registar_01"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="5dp"
        android:onClick="register" />

</LinearLayout>
