<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="pt.ua.cm.nomada.LoginActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mar"
    android:weightSum="1">


    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.39" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/email"
        android:id="@+id/loginEmailLabel"
        android:layout_marginLeft="20dp"
        android:textColor="#3ca4bf" />

    <EditText
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/loginEmailInsert"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:textColor="#3ca4bf"
        android:singleLine="true" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.11" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password"
        android:id="@+id/loginPasswordLabel"
        android:layout_marginLeft="20dp"
        android:textColor="#3ca4bf" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/loginPwdInsert"
        android:layout_marginLeft="20dp"
        android:textColor="#3ca4bf"
        android:singleLine="true"
        android:password="true" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.23" />
    <Button
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/loginOkBtn"
        android:layout_gravity="center_horizontal"
        android:textColor="#3ca4bf"
        android:background="#1cffffff"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="5dp"
        android:onClick="login"
        android:textSize="20dp" />
</LinearLayout>
